Fixed splash/email spacing

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ input[type="submit"]:visited {
 }
 
 .splash-text {
+  margin-bottom: 2rem;
 }
 
 h1 {
